# hercules

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  RELEASE.md  install.sh  opencode.json  package.json  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.cursor-plugin/: marketplace.json
.githooks/: pre-commit
.github/: dependabot.yml
.github/plugin/: marketplace.json
.github/workflows/: ci.yml  release.yml  smoke-nightly.yml
.grok-plugin/: marketplace.json
.opencode/: instructions.md
.opencode/agents/: backend-engineer.md  business-analyst.md  challenger.md  copywriter.md  cynical-reviewer.md  devops-engineer.md  document-specialist.md  frontend-engineer.md  hercules.md  lead-architect.md  maintainer.md  security-expert.md  senior-qa-engineer.md  simplicity-advocate.md  source-checker.md  ux-ui-designer.md
.opencode/commands/: build.md  design.md  discover.md  ship.md  workflow.md
.opencode/skills/code-of-conduct-generator/: SKILL.md
docs/: INDEX.md
docs/2026-07-10-universal-plugin-distribution/: 2026-07-10-universal-plugin-distribution-business-requirements.md  2026-07-10-universal-plugin-distribution-spec-06-generic-build-seam.md  2026-07-10-universal-plugin-distribution-spec-07-ci-pipeline.md  2026-07-10-universal-plugin-distribution-spec-08-cursor-runtime-smoke.md  2026-07-10-universal-plugin-distribution-spec-09-mutation-performance.md  2026-07-10-universal-plugin-distribution-spec-10-docs-split.md
docs/plans/: 2026-07-02-requirements-code-trace-index.md
docs/workflow/: workflow-diagram-detailed.html
hercules/: __main__.py  cli.py  launcher.py
hercules/methodology/: a2a_grammar.py  markdown_metrics.py  threshold_runner.py
hercules/plugin_sync/: claude_runner.py  claude_version.py  config.py  git_sync.py  lock.py  onboarding.py  self_update.py
opencode-plugin/: hercules.js
plugin/: CLAUDE.md  settings.json
plugin/.claude-plugin/: plugin.json
plugin/agents/: backend-engineer.md  business-analyst.md  challenger.md  copywriter.md  cynical-reviewer.md  devops-engineer.md  document-specialist.md  frontend-engineer.md  hercules.md  lead-architect.md  maintainer.md  security-expert.md  senior-qa-engineer.md  simplicity-advocate.md  source-checker.md  ux-ui-designer.md
plugin/commands/: build.md  design.md  discover.md  ship.md  workflow.md
plugin/hooks/: frozen_tests.py  hercules_state.py  hooks.json
plugin/protocols/: a2a-communication-protocol.md  debate-consensus-protocol.md  workflow-protocol.md
plugin/skills/code-of-conduct-generator/: SKILL.md  coverage-map.md
plugin/skills/learnings/: SKILL.md
plugin/skills/session-summary/: SKILL.md
plugin/skills/solution-complexity-scoring/: SKILL.md
plugin/skills/write-test-scenarios/: SKILL.md
scripts/: check_mutation_gate.py  generate_opencode.py  set_version.py  update_changelog.py  verify_opencode.py
scripts/ci/: annotate_nightly.sh  annotate_smoke.sh  build_gates.sh  install_cli.sh  npm_creds.sh  release_commit.sh  release_meta.sh  release_verify_checkout.sh  run_smoke.sh  smoke_matrix.py  validate_package.py
src/: models.json
src/content/: capabilities.md  persona.md
src/content/agents/: backend-engineer.md  business-analyst.md  challenger.md  copywriter.md  cynical-reviewer.md  devops-engineer.md  document-specialist.md  frontend-engineer.md  hercules.md  lead-architect.md  maintainer.md  security-expert.md  senior-qa-engineer.md  simplicity-advocate.md  source-checker.md  ux-ui-designer.md
src/content/commands/: build.md  design.md  discover.md  ship.md  workflow.md
src/content/protocols/: a2a-communication-protocol.md
src/ecosystems/: claude-code.json  copilot-cli.json  cursor.json  gemini-cli.capabilities.md  gemini-cli.dist.CAPABILITIES.md  gemini-cli.json  grok-build.dist.CAPABILITIES.md  grok-build.json  opencode.json  opencode.template.plugin.js
src/hooks/: hercules_gate.py
src/targets/claude-code/: config.json  plugin.json  settings.json  smoke.json
tests/: conftest.py  test_collection_integrity.py  test_main_entrypoint.py  test_mutation_gate.py  test_no_retired_path_refs.py  test_python_floor.py  test_set_version.py
tests/agents/: test_agents.py
tests/budgets/: test_instruction_budget.py
tests/commands/: conftest.py  test_commands.py  test_commands_build.py  test_commands_build_lifecycle.py  test_commands_contracts.py  test_commands_discover_design.py  test_commands_ship_and_flow.py
tests/docs/: test_docs.py
tests/hooks/: conftest.py  test_copilot_cli_write_gate.py  test_cursor_write_gate.py  test_enforcement_gates.py  test_frozen_acceptance.py  test_frozen_guard.py  test_frozen_overrides.py  test_frozen_resilience.py  test_frozen_resolver.py  test_frozen_tests_hook.py  test_gemini_cli_write_gate.py  test_grok_build_write_gate.py  test_hook_hygiene.py  test_hooks_wiring.py  test_opencode_write_gate.py  test_pre_tool_write_gate.py
tests/methodology/: test_a2a_grammar.py  test_agents.py  test_commands.py  test_docs.py  test_launcher.py  test_markdown_metrics.py  test_plugin_integrity.py  test_protocol_files.py  test_skills.py  test_threshold_runner.py  test_token_counter.py  test_workflow_modes.py
tests/metrics/: a2a_grammar.py  conftest.py  test_a2a_grammar.py  test_markdown_metrics.py  test_threshold_compare.py  test_threshold_execution.py  test_threshold_load.py  test_threshold_runner.py  test_threshold_targets.py  test_token_counter.py  threshold_runner.py  token_counter.py
tests/opencode/: test_generate.py
tests/plugin/: test_manifest.py  test_plugin_integrity.py
tests/plugin_sync/: conftest.py  test_claude_runner.py  test_claude_version.py  test_cli.py  test_config.py  test_git_sync.py  test_git_sync_subprocess.py  test_lock.py  test_onboarding.py  test_release_tracking.py  test_self_update.py  test_wizard.py
tests/protocols/: test_protocol_files.py  test_workflow_protocol.py
tests/release/: test_update_changelog.py
tests/skills/: test_skills.py
tests/testdata/: core.golden  thresholds.json
tests/workflow/: test_independent_review.py  test_workflow_modes.py
(+27 files in other folders)
