[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hercules"
version = "1.9.0"
description = "Hercules — Claude Code plugin with AI-assisted delivery methodology enforcement"
readme = "README.md"
license = { text = "AGPL-3.0" }
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = [
    "tiktoken>=0.7.0",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "pyyaml>=6.0",
    "tomli>=2.0; python_version < '3.11'",
    "mutmut>=2.4,<3",
]

# No package is shipped — the deliverable is the compiled plugin tree under dist/claude-code/.
# The editable install exists only to pull in the dev/test toolchain.
[tool.setuptools]
py-modules = []

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
# pytest's DEFAULT norecursedirs includes "build" and "dist" — so a test dir named
# tests/build/ is silently skipped during recursion (it collects only when named
# explicitly). We override to the stock list MINUS "build" so tests/build/ (the
# compiler suite) actually runs under `pytest tests/`. Guarded by
# tests/test_collection_integrity.py so this can never silently regress.
norecursedirs = ["*.egg", ".*", "_darcs", "CVS", "dist", "node_modules", "venv", "{arch}"]

[tool.mutmut]
# Pure transform layer (parse/render/model_map/serialize/version_targets), the generic
# descriptor engine (descriptor/genserialize/genextras), the shared enforcement hooks (src/hooks/ —
# the ONE gate adapter every ecosystem ships), and metrics carry the mutation gate. The FS boundary
# (cli/layout/emit) and the registry shell (targets/) are round-trip-covered and under the
# branch-coverage gate but not mutated — their shutil/tempfile/string mutants are largely equivalent
# and would only add noise. NOTE: emit.py stays out of the gate as FS-boundary noise, but its one
# real conditional — copy_versioned's fail-loud ${version}-injection guard (n != 1 → SystemExit) —
# is directly unit-tested at n=0/n=1/n=2 in tests/build/test_version_process.py, so a `!= 1`
# operator slip fails CI regardless of the gate.
paths_to_mutate = "tests/metrics/,src/hooks/,scripts/build/parse.py,scripts/build/render.py,scripts/build/model_map.py,scripts/build/serialize.py,scripts/build/descriptor.py,scripts/build/genserialize.py,scripts/build/genextras.py,scripts/build/version_targets.py"
paths_to_exclude = "test_*.py,__init__.py,conftest.py"
backup = false
runner = "python -m pytest tests/ -x -q --tb=no --no-header"
tests_dir = "tests/"

[tool.coverage.run]
omit = ["tests/**/test_*.py", "tests/**/__init__.py", "tests/**/conftest.py"]
